# py-teste

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
app/: __main__.py  main.py
app/api/: routes.py  schemas.py
app/core/: config.py  constants.py
app/llm/: client.py
app/memory/: session_store.py
app/orchestration/: agent.py
app/prompts/: system.py
app/tools/: kb_tool.py  markdown_parser.py
tests/: test_agent.py  test_contract.py  test_kb_tool.py  test_llm_client.py  test_session_store.py
